src/frontend/SmallCParser.java
// $ANTLR 3.4 /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g 2012-02-17 11:39:58

package frontend;

import java.io.*;
// import antlr.CommonAST;
// import antlr.collections.AST;
import org.antlr.stringtemplate.StringTemplate;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SmallCParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARGS", "BODY", "CALL", "CHAR", "CHARACTER", "COM", "COMMENT", "DECL", "ELSE", "ELSE_TO", "EQ", "EQU", "ESC_SEQ", "EXP", "FORW", "GT", "GTE", "IDENT", "IF", "IF_TO", "INCL", "INCLUDE", "INT", "LCUR", "LPAR", "LT", "LTE", "MAIN", "MIN", "MOD", "NEQ", "NUMBER", "OUTPUT", "OUTPUTC", "PLUS", "PRINT", "PROC", "PROGRAM", "RCUR", "READ", "READC", "RETURN", "RPAR", "SEMI", "STAR", "STRING", "TYPE", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int ARGS=4;
    public static final int BODY=5;
    public static final int CALL=6;
    public static final int CHAR=7;
    public static final int CHARACTER=8;
    public static final int COM=9;
    public static final int COMMENT=10;
    public static final int DECL=11;
    public static final int ELSE=12;
    public static final int ELSE_TO=13;
    public static final int EQ=14;
    public static final int EQU=15;
    public static final int ESC_SEQ=16;
    public static final int EXP=17;
    public static final int FORW=18;
    public static final int GT=19;
    public static final int GTE=20;
    public static final int IDENT=21;
    public static final int IF=22;
    public static final int IF_TO=23;
    public static final int INCL=24;
    public static final int INCLUDE=25;
    public static final int INT=26;
    public static final int LCUR=27;
    public static final int LPAR=28;
    public static final int LT=29;
    public static final int LTE=30;
    public static final int MAIN=31;
    public static final int MIN=32;
    public static final int MOD=33;
    public static final int NEQ=34;
    public static final int NUMBER=35;
    public static final int OUTPUT=36;
    public static final int OUTPUTC=37;
    public static final int PLUS=38;
    public static final int PRINT=39;
    public static final int PROC=40;
    public static final int PROGRAM=41;
    public static final int RCUR=42;
    public static final int READ=43;
    public static final int READC=44;
    public static final int RETURN=45;
    public static final int RPAR=46;
    public static final int SEMI=47;
    public static final int STAR=48;
    public static final int STRING=49;
    public static final int TYPE=50;
    public static final int WHILE=51;
    public static final int WS=52;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SmallCParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SmallCParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SmallCParser.tokenNames; }
    public String getGrammarFileName() { return "/afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g"; }


        public static void main(String[] args) throws Exception {
            // read in all files from input
            if (args.length > 0) {
                for (int i=0; i<args.length; i++)
                    getFiles(new File(args[i]));
            }
        } //main()

        // the logic for this was adapted from http://javadude.com/articles/antlrtut/
        // an ANTLR2.0 tutorial...but had good ideas about testing
        // this handles finding the files and sending them to be parsed
        public static void getFiles(File f) throws Exception {
            // if we found a directory get all the files in that directory and
            // try to parse them
            if (f.isDirectory()) {
                String files[] = f.list();
                for (int i=0; i<files.length; i++) getFiles(new File(f, files[i]));
            }
            // this is a file...parse it
            else if(f.getName().substring(f.getName().length()-2).equals(".c"))
                parseFile(new ANTLRFileStream(f.getAbsolutePath()));
        } //getFiles

        // parses the file
        public static void parseFile(ANTLRFileStream f) throws Exception {
            String name = f.getSourceName();
            System.out.println("Parsing: "+name.substring(name.lastIndexOf("/")+1));

            //construct the objects we need to check this file and construct AST
            SmallCLexer lexer = new SmallCLexer(f);
            CommonTokenStream tokens = new CommonTokenStream(lexer);
            SmallCParser parser = new SmallCParser(tokens);
            SmallCParser.prog_return r = parser.prog();

            name = name.substring(0,f.getSourceName().length()-2)+ ".txt";
            //write the tree to a file
            try {
                BufferedWriter out = new BufferedWriter(new FileWriter(name));
                out.write(((Tree)r.tree).toStringTree());
                out.close();
            }catch (Exception e) {
                System.out.println("ERROR: "+e);
            }

            System.out.println();
        } //parseFile()


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:65:1: prog : includes decls procedure main -> ^( PROGRAM includes decls procedure main ) ;
    public final SmallCParser.prog_return prog() throws RecognitionException {
        SmallCParser.prog_return retval = new SmallCParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SmallCParser.includes_return includes1 =null;

        SmallCParser.decls_return decls2 =null;

        SmallCParser.procedure_return procedure3 =null;

        SmallCParser.main_return main4 =null;


        RewriteRuleSubtreeStream stream_decls=new RewriteRuleSubtreeStream(adaptor,"rule decls");
        RewriteRuleSubtreeStream stream_includes=new RewriteRuleSubtreeStream(adaptor,"rule includes");
        RewriteRuleSubtreeStream stream_procedure=new RewriteRuleSubtreeStream(adaptor,"rule procedure");
        RewriteRuleSubtreeStream stream_main=new RewriteRuleSubtreeStream(adaptor,"rule main");
        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:65:10: ( includes decls procedure main -> ^( PROGRAM includes decls procedure main ) )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:65:12: includes decls procedure main
            {
            pushFollow(FOLLOW_includes_in_prog42);
            includes1=includes();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_includes.add(includes1.getTree());

            pushFollow(FOLLOW_decls_in_prog44);
            decls2=decls();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_decls.add(decls2.getTree());

            pushFollow(FOLLOW_procedure_in_prog46);
            procedure3=procedure();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_procedure.add(procedure3.getTree());

            pushFollow(FOLLOW_main_in_prog48);
            main4=main();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_main.add(main4.getTree());

            // AST REWRITE
            // elements: includes, procedure, decls, main
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 66:11: -> ^( PROGRAM includes decls procedure main )
            {
                // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:66:14: ^( PROGRAM includes decls procedure main )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, stream_includes.nextTree());

                adaptor.addChild(root_1, stream_decls.nextTree());

                adaptor.addChild(root_1, stream_procedure.nextTree());

                adaptor.addChild(root_1, stream_main.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class includes_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includes"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:68:1: includes : ( INCLUDE s+= STRING )* -> ^( INCL ( $s)* ) ;
    public final SmallCParser.includes_return includes() throws RecognitionException {
        SmallCParser.includes_return retval = new SmallCParser.includes_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INCLUDE5=null;
        Token s=null;
        List list_s=null;

        Object INCLUDE5_tree=null;
        Object s_tree=null;
        RewriteRuleTokenStream stream_INCLUDE=new RewriteRuleTokenStream(adaptor,"token INCLUDE");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:68:12: ( ( INCLUDE s+= STRING )* -> ^( INCL ( $s)* ) )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:68:14: ( INCLUDE s+= STRING )*
            {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:68:14: ( INCLUDE s+= STRING )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==INCLUDE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:68:15: INCLUDE s+= STRING
            	    {
            	    INCLUDE5=(Token)match(input,INCLUDE,FOLLOW_INCLUDE_in_includes84); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_INCLUDE.add(INCLUDE5);


            	    s=(Token)match(input,STRING,FOLLOW_STRING_in_includes88); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_STRING.add(s);

            	    if (list_s==null) list_s=new ArrayList();
            	    list_s.add(s);


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // AST REWRITE
            // elements: s
            // token labels: 
            // rule labels: retval
            // token list labels: s
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_s=new RewriteRuleTokenStream(adaptor,"token s", list_s);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 69:17: -> ^( INCL ( $s)* )
            {
                // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:69:20: ^( INCL ( $s)* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(INCL, "INCL")
                , root_1);

                // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:69:28: ( $s)*
                while ( stream_s.hasNext() ) {
                    adaptor.addChild(root_1, stream_s.nextNode());

                }
                stream_s.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includes"


    public static class decls_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "decls"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:71:1: decls : (id+= typedident SEMI )* -> ^( DECL ( $id)* ) ;
    public final SmallCParser.decls_return decls() throws RecognitionException {
        SmallCParser.decls_return retval = new SmallCParser.decls_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEMI6=null;
        List list_id=null;
        RuleReturnScope id = null;
        Object SEMI6_tree=null;
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_typedident=new RewriteRuleSubtreeStream(adaptor,"rule typedident");
        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:71:10: ( (id+= typedident SEMI )* -> ^( DECL ( $id)* ) )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:71:12: (id+= typedident SEMI )*
            {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:71:12: (id+= typedident SEMI )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CHAR||LA2_0==INT) ) {
                    int LA2_1 = input.LA(2);

                    if ( (LA2_1==IDENT) ) {
                        int LA2_3 = input.LA(3);

                        if ( (LA2_3==SEMI) ) {
                            alt2=1;
                        }


                    }


                }


                switch (alt2) {
            	case 1 :
            	    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:71:13: id+= typedident SEMI
            	    {
            	    pushFollow(FOLLOW_typedident_in_decls132);
            	    id=typedident();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_typedident.add(id.getTree());
            	    if (list_id==null) list_id=new ArrayList();
            	    list_id.add(id.getTree());


            	    SEMI6=(Token)match(input,SEMI,FOLLOW_SEMI_in_decls134); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_SEMI.add(SEMI6);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: id
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: id
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"token id",list_id);
            root_0 = (Object)adaptor.nil();
            // 72:17: -> ^( DECL ( $id)* )
            {
                // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:72:20: ^( DECL ( $id)* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DECL, "DECL")
                , root_1);

                // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:72:28: ( $id)*
                while ( stream_id.hasNext() ) {
                    adaptor.addChild(root_1, stream_id.nextTree());

                }
                stream_id.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "decls"


    public static class typedident_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "typedident"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:74:1: typedident : ( INT | CHAR ) ^ IDENT ;
    public final SmallCParser.typedident_return typedident() throws RecognitionException {
        SmallCParser.typedident_return retval = new SmallCParser.typedident_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set7=null;
        Token IDENT8=null;

        Object set7_tree=null;
        Object IDENT8_tree=null;

        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:74:12: ( ( INT | CHAR ) ^ IDENT )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:74:14: ( INT | CHAR ) ^ IDENT
            {
            root_0 = (Object)adaptor.nil();


            set7=(Token)input.LT(1);

            set7=(Token)input.LT(1);

            if ( input.LA(1)==CHAR||input.LA(1)==INT ) {
                input.consume();
                if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(set7)
                , root_0);
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            IDENT8=(Token)match(input,IDENT,FOLLOW_IDENT_in_typedident180); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENT8_tree = 
            (Object)adaptor.create(IDENT8)
            ;
            adaptor.addChild(root_0, IDENT8_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "typedident"


    public static class proctype_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "proctype"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:76:1: proctype : ( INT | CHAR )? ;
    public final SmallCParser.proctype_return proctype() throws RecognitionException {
        SmallCParser.proctype_return retval = new SmallCParser.proctype_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set9=null;

        Object set9_tree=null;

        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:76:12: ( ( INT | CHAR )? )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:76:14: ( INT | CHAR )?
            {
            root_0 = (Object)adaptor.nil();


            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:76:14: ( INT | CHAR )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CHAR||LA3_0==INT) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:
                    {
                    set9=(Token)input.LT(1);

                    if ( input.LA(1)==CHAR||input.LA(1)==INT ) {
                        input.consume();
                        if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                        (Object)adaptor.create(set9)
                        );
                        state.errorRecovery=false;
                        state.failed=false;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "proctype"


    public static class procdef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "procdef"
    // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:78:1: procdef : tp= proctype id= IDENT LPAR ag= args RPAR bd= body -> ^( $id ^( TYPE ( $tp)? ) ^( ARGS ( $ag)? ) ( $bd)? ) ;
    public final SmallCParser.procdef_return procdef() throws RecognitionException {
        SmallCParser.procdef_return retval = new SmallCParser.procdef_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token id=null;
        Token LPAR10=null;
        Token RPAR11=null;
        SmallCParser.proctype_return tp =null;

        SmallCParser.args_return ag =null;

        SmallCParser.body_return bd =null;


        Object id_tree=null;
        Object LPAR10_tree=null;
        Object RPAR11_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_RPAR=new RewriteRuleTokenStream(adaptor,"token RPAR");
        RewriteRuleTokenStream stream_LPAR=new RewriteRuleTokenStream(adaptor,"token LPAR");
        RewriteRuleSubtreeStream stream_body=new RewriteRuleSubtreeStream(adaptor,"rule body");
        RewriteRuleSubtreeStream stream_args=new RewriteRuleSubtreeStream(adaptor,"rule args");
        RewriteRuleSubtreeStream stream_proctype=new RewriteRuleSubtreeStream(adaptor,"rule proctype");
        try {
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:78:12: (tp= proctype id= IDENT LPAR ag= args RPAR bd= body -> ^( $id ^( TYPE ( $tp)? ) ^( ARGS ( $ag)? ) ( $bd)? ) )
            // /afs/inf.ed.ac.uk/user/s11/s1129936/Documents/compiler_reese/src/frontend/SmallC.g:78:14: tp= proctype id= IDENT LPAR ag= args RPAR bd= body
            {
            pushFollow(FOLLOW_proctype_in_procdef212);
            tp=proctype();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_proctype.add(tp.getTree());

            id=(Token)match(input,IDENT,FOLLOW_IDENT_in_procdef216); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_IDENT.add(id);


            LPAR10=(Token)match(input,LPAR,FOLLOW_LPAR_in_procdef218); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LPAR.add(LPAR10);


            pushFollow(FOLLOW_args_in_procdef222);
            ag=args();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_args.add(ag.getTree());

            RPAR11=(Token)match(input,RPAR,FOLLOW_RPAR_in_procdef224); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RPAR.add(RPAR11);


            pushFollow(FOLLOW_body_in_procdef228);
            bd=body();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_body.add(bd.getTree());

            // AST REWRITE
            // elements: bd, ag, id, tp
            // token labels: id
            // rule labels: retval, tp, ag, bd
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleTokenStream stream_id=new RewriteRuleTokenStream(adaptor,"token id",id);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_tp=new RewriteRuleSubtreeStream(adaptor,"rule tp",tp!=null?tp.tree:null);
            RewriteRuleSubtreeStream stream_ag=new RewriteRuleSubtreeStream(adaptor,"rule ag",ag!=null?ag.tree:null);
            RewriteRuleSubtreeStream stream_bd=new RewriteRuleSubtreeStream(adaptor,"rule bd",bd!=null?bd.tree:null);
